# SampleProjectCPP

./: .gitignore  README.md
SampleProjectCPP/: CMakeLists.txt
SampleProjectCPP/Sources/: TestClass.cpp  TestClass.h  main.cpp
Scripts/Linux/: generate.sh
Scripts/Mac/: generate.sh
Scripts/Windows/: generate.bat
